added route for mistral

--- a/templates/news_key.html
+++ b/templates/news_key.html
@@ -56,7 +56,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="my-4">Latest News - {{ keyword }}</h1>
+        <h1 class="my-4">Latest News related to {{ keyword }}</h1>
         <div class="row">
             {% for item in data %}
             <div class="col-md-6 news-card">
