--- a/templates/mistralai.html
+++ b/templates/mistralai.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <h1><b>Welcome to b0bot!</b></h1>
-    <h3>You are now using MistralAI as you base LLM</h3>
+    <h3>You are now using MistralAI as your base LLM</h3>
     <ul>
         <li><u>Two available URL paths:</u></li>
         <li><code>/news</code></li>
