--- a/templates/home.html
+++ b/templates/home.html
@@ -21,18 +21,28 @@
         ul {
             list-style-type: none; /* Remove default bullets */
             padding: 0;
+            text-align: left;
         }
         li {
             margin: 5px 0; /* Add some spacing between list items */
+            text-align: left;
         }
     </style>
 </head>
 <body>
     <h1><b>Welcome to b0bot!</b></h1>
+    <h3> This is a CyberSecurity News API tailored for automated bots on social media platforms.</h3>
     <ul>
-        <li><u>Two available URL paths:</u></li>
-        <li><code>/news</code></li>
-        <li><code>/news_keywords?keywords=[Place news keywords here]</code></li>
+        <li><u>3 available LLMs to choose from:</u></li>
+        <li>1.Meta-Llama-3-8B-Instruct</li>
+        <li>2.Gemma-2b</li>
+        <li>3.Mistral-7B-Instruct-v0.2</li>
+    </ul>
+    <ul>
+        <li><u>3 available URL paths:</u></li>
+        <li><code>/llama</code></li>
+        <li><code>/gemma</code></li>
+        <li><code>/mistralai</code></li>
     </ul>
 </body>
 </html>
