--- a/templates/mistralai.html
+++ b/templates/mistralai.html
@@ -32,8 +32,8 @@
     <h3>You are now using MistralAI as your base LLM</h3>
     <ul>
         <li><u>Two available URL paths:</u></li>
-        <li><code>/news</code></li>
-        <li><code>/news_keywords?keywords=[Place news keywords here]</code></li>
+        <li><code>/mistralai/news</code></li>
+        <li><code>/mistralai/news_keywords?keywords=[Place news keywords here]</code></li>
     </ul>
 </body>
 </html>
