added hyperlinks for different routes

--- a/templates/home.html
+++ b/templates/home.html
@@ -40,9 +40,9 @@
     </ul>
     <ul>
         <li><u>3 available URL paths:</u></li>
-        <li><code>/llama</code></li>
-        <li><code>/gemma</code></li>
-        <li><code>/mistralai</code></li>
+        <li><a href="/llama"><code>/llama</code></a></li>
+        <li><a href="/gemma"><code>/gemma</code></a></li>
+        <li><a href="/mistralai"><code>/mistralai</code></a></li>
     </ul>
 </body>
 </html>
